--- a/public/css/AboutUs.css
+++ b/public/css/AboutUs.css
@@ -3,7 +3,7 @@ header {
     width: 100%;
     height: 700px;
     background-color: black;
-    background: url(/public/images/Mario2.jpg) no-repeat;
+    background-image: url(/public/images/Mario2.jpg) no-repeat;
     background-size: cover;
     background-attachment: fixed;
     position: relative;
