--- a/public/css/Modulos_Main.css
+++ b/public/css/Modulos_Main.css
@@ -101,8 +101,8 @@ header{
         width: 100%;
         height: 550px;
         background: #bc4e9c;  /* fallback for old browsers */
-        background: -webkit-linear-gradient(to right, hsla(0, 0%, 0%, 0.473), hsla(320, 88%, 48%, 0.204)), url(../Images/modulosFondo.jpg);  /* Chrome 10-25, Safari 5.1-6 */
-        background: linear-gradient(to right, hsla(0, 93%, 24%, 0.612), hsla(0, 0%, 0%, 0)), url(../Images/modulosFondo.jpg); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        background: -webkit-linear-gradient(to right, hsla(0, 0%, 0%, 0.473), hsla(320, 88%, 48%, 0.204)), url(/images/modulosFondo.jpg);  /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, hsla(0, 93%, 24%, 0.612), hsla(0, 0%, 0%, 0)), url(/images/modulosFondo.jpg); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
         background-size: cover;
         background-attachment: fixed;
     
