--- a/public/css/contenido.css
+++ b/public/css/contenido.css
@@ -16,6 +16,23 @@ text-align: center;
 .m-3 {
     margin: 1rem!important;
 }
+.imgBlock{
+    height: 50px ;
+    width: 50px;
+    margin-right: auto;
+    margin-left: auto;
+}
+.divAnuncio{
+    background-color: var(--light);
+    border: thin solid var(--lblue1);
+    border-radius: 5px;
+    box-shadow: 2px 2px 5px var(--lblue2);
+    float: left;
+    margin: 8px;
+    padding-top: 5px;
+    text-align: center;
+    width: 160px;
+}
 .img-mep{
     width: 200px;
     height: 100px;
